<resources>
    <string name="app_name">Rendra MOV BWA</string>
    <string name="lewati_perkenalan">Lewati Perkenalan</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="nowplaying">Now Playing</string>
    <string name="nowplaying_desc">Lebih mudah untuk mengetahui\nfilm yang sedang tampil</string>
    <string name="presale">Pre Sale</string>
    <string name="presale_desc">Tidak khawatir ketinggalan\nupdate film terbaru</string>
    <string name="cashless">Cashless</string>
    <string name="cashless_desc">Gunakan e-wallet untuk\ntransaksi tiket nonton</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="masuk_akun">Masuk Akun</string>
    <string name="daftar_akun_baru">Daftar Akun Baru</string>
    <string name="sign_up">Sign Up</string>
    <string name="nama">Nama</string>
    <string name="email_address">Email Address</string>
    <string name="upload_nanti">Upload Nanti</string>
    <string name="photo">Photo</string>
    <string name="selamat_datang">Selamat Datang\nPranarendra D.</string>
    <string name="simpan_dan_lanjutkan">Simpan dan Lanjutkan</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="avengers_judul">Avengers: Infinity War</string>
    <string name="avengers_type">Action, Sci-fi, Kids</string>
    <string name="storyboard">Storyboard</string>
    <string name="whos_played">Who’s Played</string>
    <string name="pilih_bangku">Pilih Bangku</string>
    <string name="layar_bioskop">LAYAR BIOSKOP</string>
    <string name="beli_tiket">Beli Tiket</string>
    <string name="empty">Empty</string>
    <string name="booked">Booked</string>
    <string name="selected_seat">Selected Seat</string>
    <string name="checkout">Checkout</string>
    <string name="bayar_sekarang">Bayar Sekarang</string>
    <string name="batalkan">Batalkan</string>
    <string name="when">When</string>
    <string name="date_time">Date and Time</string>
    <string name="cinema">Cinema</string>
    <string name="total_harus_dibayar">Total Harus Dibayar</string>
    <string name="items">Items</string>
    <string name="e_wallet">E-Wallet</string>
    <string name="total_balance">Total Balance</string>
    <string name="simpan_data_baru">Simpan Data Baru</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_wallet">My Wallet</string>
    <string name="saldo_tersedia">Saldo Tersedia</string>
    <string name="daftar_transaksi">Daftar Transaksi</string>
    <string name="history">History</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="happy_watching">Happy Watching!</string>
    <string name="happy_watching_desc">Tiket telah berhasil dibeli\ndan selamat menikmati film</string>
    <string name="lihat_tiket">Lihat Tiket</string>
    <string name="home">Home</string>
    <string name="top_up">Top Up</string>
    <string name="custom_amount">Custom Amount</string>
    <string name="quick_option">quick options :</string>
    <string name="you_got_it">You got it!</string>
    <string name="lihat_wallet">Lihat Wallet</string>
    <string name="change_language">Change Language</string>
</resources>